unstyled app, push simulator, report views

--- a/views/wearable-simulator.html
+++ b/views/wearable-simulator.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src='http://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="http://momentjs.com/downloads/moment.min.js"></script>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Cadence | FitBit simulator</title>
 </head>
 <body>
-
+<header><h1>Cadence  | FitBit simulator</h1></header>
+<button type="button">Push NightTerror</button>
+<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+<script src="pushNightTerrors.js"></script>
 </body>
 </html>
