--- a/views/app.html
+++ b/views/app.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src='http://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="http://momentjs.com/downloads/moment.min.js"></script>
     <meta charset="UTF-8">
     <title>Cadence</title>
 </head>
 <body>
-<header><h1>Cadence</h1></header>
-<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
-<script>
-    //First iteration an App that gets simulated nightTerror detection from wearable.
-    var incomingNightTerror = 'child_added',
-            NightTerrors = new Firebase('blinding-inferno-2101.firebaseio.com');
-
-    NightTerrors.on(incomingNightTerror, function (possibleNightTerror) {
-        alert('wake up having a night terror');
-    });
-</script>
+<header><h1>Cadence Alerts</h1></header>
+<div id="messages"></div>
+<button onclick="goToVaFacilitiesPage()">Find Near VA Provider</button>
+<script src="listenForNightTerror.js"></script>
+<script src="methods.js"></script>
 </body>
 </html>
