--- a/views/report.html
+++ b/views/report.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src='http://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="http://momentjs.com/downloads/moment.min.js"></script>
 </head>
 <body>
 
@@ -15,66 +16,6 @@
         </tr>
     </table>
 </div>
-<script>
-    var HISTORY_CAP = 5,
-        NightTerrors = new Firebase('blinding-inferno-2101.firebaseio.com');
-
-    // Keep a mapping of firebase locations to HTML elements, so we can move / remove elements as necessary.
-    var htmlForPath = {};
-
-    // Helper function that takes a new score snapshot and adds an appropriate row to our leaderboard table.
-    function handleNewNightTerrorAdded(nightTerror, prevScoreName) {
-        var newScoreRow = $("<tr/>");
-        newScoreRow.append($("<td/>").append($("<em/>").text(nightTerror.val().timestamp)));
-        newScoreRow.append($("<td/>").text(nightTerror.val().symptom));
-
-        // Store a reference to the table row so we can get it again later.
-        htmlForPath[nightTerror.key()] = newScoreRow;
-
-        // Insert the new score in the appropriate place in the table.
-        if (prevScoreName === null) {
-            $("#leaderboardTable").append(newScoreRow);
-        }
-        else {
-            var lowerScoreRow = htmlForPath[prevScoreName];
-            lowerScoreRow.before(newScoreRow);
-        }
-    }
-
-    // Helper function to handle a score object being removed; just removes the corresponding table row.
-    function handleNewNightTerrorRemoved(scoreSnapshot) {
-        var removedScoreRow = htmlForPath[scoreSnapshot.key()];
-        removedScoreRow.remove();
-        delete htmlForPath[scoreSnapshot.key()];
-    }
-
-    // Create a view to only receive callbacks for the last LEADERBOARD_SIZE scores
-    var nightTerrorRecentHistory = NightTerrors.limitToLast(HISTORY_CAP);
-
-    // Add a callback to handle when a new score is added.
-    nightTerrorRecentHistory.on('child_added', function (newScoreSnapshot, prevScoreName) {
-        handleScoreAdded(newScoreSnapshot, prevScoreName);
-    });
-
-
-    // Add a callback to handle when a new score is added.
-    scoreListView.on('child_added', function (newScoreSnapshot, prevScoreName) {
-        handleNewNightTerrorAdded(newScoreSnapshot, prevScoreName);
-    });
-
-    // Add a callback to handle when a score is removed
-    nightTerrorRecentHistory.on('child_removed', function (oldScoreSnapshot) {
-        handleNewNightTerrorRemoved(oldScoreSnapshot);
-    });
-
-    // Add a callback to handle when a score changes or moves positions.
-    var changedCallback = function (scoreSnapshot, prevScoreName) {
-        handleNewNightTerrorRemoved(scoreSnapshot);
-        handleNewNightTerrorAdded(scoreSnapshot, prevScoreName);
-    };
-
-    nightTerrorRecentHistory.on('child_moved', changedCallback);
-    nightTerrorRecentHistory.on('child_changed', changedCallback);
-</script>
+<script src="recentNightTerrors.js"></script>
 </body>
 </html>
