--- a/views/app.html
+++ b/views/app.html
@@ -27,6 +27,16 @@
                 <a class="mdl-navigation__link" href="">Link</a>
                 <a class="mdl-navigation__link" href="">Link</a>
                 <a class="mdl-navigation__link" href="">Link</a>
+                <!-- Number badge on icon -->
+
+                <!--<script>
+                    var NightTerrors = new Firebase('blinding-inferno-2101.firebaseio.com');
+                    NightTerrors.once("value", function(snapshot)){
+
+                    }
+                </script>-->
+
+                <a class="material-icons mdl-badge" data-badge="1" href="./alerts.html">account_box</a>
             </nav>
         </div>
     </header>
@@ -75,7 +85,8 @@
 </div>
 <header><h1>Cadence Alerts</h1></header>
 <div id="messages"></div>
-<button onclick="goToVaFacilitiesPage()">Find Near VA Provider</button>
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+        onclick="goToVaFacilitiesPage()">Find Near VA Provider</button>
 <script src="listenForNightTerror.js"></script>
 <script src="methods.js"></script>
 </body>
