--- a/views/register-users.html
+++ b/views/register-users.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.indigo-pink.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="alarm-clock.css" />
+
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.min.js"></script>
+
+    <script src='http://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+    <script src="http://momentjs.com/downloads/moment.min.js"></script>
+    <script src="registerUsers.js"></script>
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-
+    You successfully loaded 4 mock users.
 </body>
 </html>
