--- a/views/app.html
+++ b/views/app.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.indigo-pink.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="alarm-clock.css" />
+    <link rel="stylesheet" href="nyancat.css" />
 
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.min.js"></script>
 
@@ -11,35 +12,28 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="http://momentjs.com/downloads/moment.min.js"></script>
 
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Sleep Cadence</title>
+    <style>
+        section { margin-top: 3em;}
+    </style>
 </head>
 <body>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-            <!-- Title -->
-            <span class="mdl-layout-title">Sleep Cadence</span>
+            <span class="mdl-layout-title">CADENCE</span>
             <div class="mdl-layout-spacer"></div>
-            <!-- Navigation. We hide it in small screens. -->
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-            </nav>
         </div>
     </header>
     <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">Title</span>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
+            <a class="mdl-navigation__link" href="report.html">Report</a>
+            <a class="mdl-navigation__link" href="others.html">Others Report</a>
         </nav>
     </div>
-    <main class="mdl-layout__content">
+    <div class="mdl-layout__content">
         <div class="page-content" style="position: relative">
             <div class="contain-clock">
                 <div class="face-1">
@@ -71,12 +65,103 @@
 
             <button class="btn_alarm" onclick="hide(this)">&nbsp;</button>
         </div>
-    </main>
+    </div>
 </div>
-<header><h1>Cadence Alerts</h1></header>
+<section id="options" style="display: none">
+    <div><button type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="chooseCat();">Cat Video</button></div>
+</section>
+<section id="chosen" style="position: relative">
+    <!--<div id="mainContainer" style="display:none">-->
+        <!--<div id="nyanCat">-->
+            <!--<div id="wholeHead">-->
+                <!--<div class="skin ear"></div>-->
+                <!--<div class="skin ear rightEar"></div>-->
+                <!--<div id="mainHead" class="skin">-->
+                    <!--<div class="eye"></div>-->
+                    <!--<div class="eye rightEye"></div>-->
+                    <!--<div class="nose"></div>-->
+                    <!--<div class="chick"></div>-->
+                    <!--<div class="chick rightChick"></div>-->
+                    <!--<div class="mouth">E</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div id="toastBody">-->
+                <!--<div>-->
+                    <!--&nbsp;  &nbsp; &nbsp;.&nbsp;&nbsp;.&nbsp; &nbsp; &nbsp;..&nbsp;  &nbsp; &nbsp;.&nbsp;.&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;..&nbsp;  &nbsp; &nbsp;.&nbsp;&nbsp;.-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div id="wholeTail">-->
+                <!--<div class="tail skin"></div>-->
+                <!--<div class="tail middleTail skin"></div>-->
+                <!--<div class="tail backTail skin"></div>-->
+            <!--</div>-->
+            <!--<div id="allYourLegAreBelongToUs">-->
+                <!--<div class="skin leg back leftBack"></div>-->
+                <!--<div class="skin leg back"></div>-->
+                <!--<div class="skin leg front leftFront"></div>-->
+                <!--<div class="skin leg front"></div>-->
+            <!--</div>-->
+            <!--<div class="rainbow"></div>-->
+            <!--<div class="rainbow r2"></div>-->
+            <!--<div class="rainbow r3"></div>-->
+            <!--<div class="rainbow r4"></div>-->
+        <!--</div>-->
+        <!--<div class="star starMovement1">-->
+            <!--<div number="1"></div>-->
+            <!--<div number="2"></div>-->
+            <!--<div number="3"></div>-->
+            <!--<div number="4"></div>-->
+            <!--<div number="5"></div>-->
+            <!--<div number="6"></div>-->
+            <!--<div number="7"></div>-->
+            <!--<div number="8"></div>-->
+        <!--</div>-->
+        <!--<div class="star starMovement2 backwards">-->
+            <!--<div number="1"></div>-->
+            <!--<div number="2"></div>-->
+            <!--<div number="3"></div>-->
+            <!--<div number="4"></div>-->
+            <!--<div number="5"></div>-->
+            <!--<div number="6"></div>-->
+            <!--<div number="7"></div>-->
+            <!--<div number="8"></div>-->
+        <!--</div>-->
+        <!--<div class="star starMovement3">-->
+            <!--<div number="1"></div>-->
+            <!--<div number="2"></div>-->
+            <!--<div number="3"></div>-->
+            <!--<div number="4"></div>-->
+            <!--<div number="5"></div>-->
+            <!--<div number="6"></div>-->
+            <!--<div number="7"></div>-->
+            <!--<div number="8"></div>-->
+        <!--</div>-->
+        <!--<div class="star starMovement4">-->
+            <!--<div number="1"></div>-->
+            <!--<div number="2"></div>-->
+            <!--<div number="3"></div>-->
+            <!--<div number="4"></div>-->
+            <!--<div number="5"></div>-->
+            <!--<div number="6"></div>-->
+            <!--<div number="7"></div>-->
+            <!--<div number="8"></div>-->
+        <!--</div>-->
+        <!--<div class="star starMovement5">-->
+            <!--<div number="1"></div>-->
+            <!--<div number="2"></div>-->
+            <!--<div number="3"></div>-->
+            <!--<div number="4"></div>-->
+            <!--<div number="5"></div>-->
+            <!--<div number="6"></div>-->
+            <!--<div number="7"></div>-->
+            <!--<div number="8"></div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <div id="seek-treatment" style="display: none"></div>
+</section>
 <div id="messages"></div>
-<button onclick="goToVaFacilitiesPage()">Find Near VA Provider</button>
-<script src="listenForNightTerror.js"></script>
 <script src="methods.js"></script>
+<script src="listenForMyNightTerror.js"></script>
+
 </body>
 </html>
