--- a/views/app.html
+++ b/views/app.html
@@ -47,7 +47,7 @@
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">CADENCE</span>
+            <span class="mdl-layout-title">CADENCE v2</span>
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
             <nav class="mdl-navigation mdl-layout--large-screen-only">
@@ -213,9 +213,7 @@
     </div>
 </div>
 <div id="messages"></div>
-<script src="listenForNightTerror.js"></script>
 <script src="methods.js"></script>
 <script src="listenForMyNightTerror.js"></script>
-
 </body>
 </html>
